# Linux-Use

./: .env-example  .gitignore  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION_STATUS.md  LINUX_ADAPTATION.md  QUICKSTART.md  QUICKSTART_V2.md  README.md  README_NEW.md  ROADMAP.md  TEST_RESULTS.md  TUI_README.md  TUI_USER_GUIDE.md  app.py  example_agent_test.py  example_usage.py  main.py  pyproject.toml  run_tests.py  run_tests.sh  run_tui_tests.sh  test_import.py  test_linux_agent.py  test_simple.py  tui.py
.emergent/: emergent.yml  summary.txt
linux_use/agent/: __init__.py  service.py  state.py  utils.py
linux_use/agent/desktop/: config.py  service.py  views.py
linux_use/agent/prompt/: previous_observation.md  service.py  system.md
linux_use/agent/registry/: service.py
linux_use/agent/tools/: service.py  views.py
linux_use/agent/tree/: service.py
linux_use/tui/: __init__.py  app.py  config.py  theme.tcss
linux_use/tui/screens/: __init__.py  configuration.py  dashboard.py  diagnostics.py  installation.py  monitoring.py  welcome.py
linux_use/tui/services/: __init__.py  agent_manager.py  agent_service.py  session_recorder.py
linux_use/tui/utils/: __init__.py  diagnostics.py  installer.py  system_detector.py
linux_use/tui/widgets/: __init__.py  ascii_banner.py  log_viewer.py  metrics_display.py  status_panel.py
tests/: test_tui_integration.py
tests/unit/agent/: test_agent_service.py  test_agent_utils.py  test_agent_views.py
tests/unit/agent/agent_prompt/: test_agent_prompt_service.py
tests/unit/agent/agent_registry/: test_agent_registry_service.py  test_agent_registry_views.py
tests/unit/agent/agent_tools/: test_agent_tools_service.py  test_agent_tools_views.py
tests/unit/desktop/: test_desktop_config.py  test_desktop_init.py  test_desktop_views.py
tests/unit/tree/: test_tree_config.py  test_tree_init.py  test_tree_utils.py  test_tree_views.py
windows_use/agent/: __init__.py  service.py  state.py  utils.py  views.py
windows_use/agent/desktop/: service.py
windows_use/agent/prompt/: action.md  answer.md  observation.md  previous_observation.md  service.py  system.md
windows_use/agent/registry/: service.py
windows_use/agent/tools/: service.py  views.py
windows_use/agent/tree/: service.py  views.py
windows_use/desktop/: __init__.py  config.py  service.py  views.py
windows_use/tree/: __init__.py  config.py  service.py  utils.py  views.py
